--- a/src/index.html
+++ b/src/index.html
@@ -19,6 +19,9 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="black"/>
   <link rel="manifest" href="manifest.webmanifest">
   <meta name="theme-color" content="#1976d2">
+
+  <link rel="stylesheet" href="assets/awesomplete/awesomplete.css">
+  <script src="assets/awesomplete/awesomplete.min.js"></script>
 </head>
 
 <body>
